config the default index file.

--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 Require all granted
+DirectoryIndex actions/index.py
 RewriteEngine on
 RewriteRule ^avatar/(\w{32})$ actions/avatar.py?uid=$1
 RewriteRule ^ajaxchangeimg/(\w{32}\.[a-zA-Z]{3,4})$ actions/ajaxchangeimg.py?imgname=$1
